@@ -23,10 +23,11 @@ Version 1.0.4 to be released
 - Bug: CWebUser::hasState does not return consistent result (Qiang)
 - Bug: A module layout in a theme cannot be applied (Qiang)
 - Bug: Enabling both CSRF prevention and theming may cause a PHP error (Qiang)
-- New #171: Add version info to yiic help output (Qiang)
+- New #171: Added version info to yiic help output (Qiang)
 - New #172: Added eAccelerator cache driver (Steffen)
 - New #195: Added CModel::scenario property (Qiang)
 - New #203: Added CZendDataCache (Steffen)
+- New #207: Enhanced CHtml::activeFileField so that we can still use $_POST to detect form submission under some rare cases (Qiang)
 - New: Added support to GROUP BY and HAVING in eager loading of AR (Qiang)
 - New: Added CClientScript::scriptFiles and CClientScript::cssFiles (Qiang)
 - New: Added SQL Server support for Active Record (Christophe)
